--- a/force-app/main/default/classes/TemperatureConverter.cls
+++ b/force-app/main/default/classes/TemperatureConverter.cls
@@ -1,6 +1,6 @@
 public class TemperatureConverter {
-    public static Decimal FahrenheitToCelsius(Decimal fh){
-        Decimal cs = (fh-32)*5/9;
+    public static Decimal FahrenheitToCelcius(Decimal fh){
+        Decimal cs=(fh-32)*5/9;
         return cs.setScale(2);
     }
 }
